alteração no estilo

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
     <section id="redes-socias">
         <div class="redes">
-            <a href="https://www.facebook.com/alex.alexandre.142/" target="_blank"><img src="imagens/facebook-icon.png" alt="facebook-icon"></a>
+            <a href="https://www.facebook.com/alex.alexandre.142/" target="_blank"><img src="imagens/facebook-icon.png" alt="facebook-icon" style="border-radius:30%;"></a>
             <a href=""><img src="imagens/2048px-Instagram_icon.png" alt="2048px-Instagram_icon"></a>
-            <a href="https://www.linkedin.com/in/alex-barbosa-20888418b/" target="_blank"><img src="imagens/linkedin.png" alt="linkdin-icon"></a>
+            <a href="https://www.linkedin.com/in/alex-barbosa-20888418b/" target="_blank"><img src="imagens/linkedin.png" alt="linkdin-icon" style="border-radius:30%;"></a>
         </div>
     </section>
     <section id="arrow">
@@ -110,7 +110,7 @@
                     <a href=""><img src="imagens/Apps-Google-Maps-icon.png" alt="Maps-icon" width="100%" height="100%"></a>
                     <a href="">
                     <img src="imagens/whatsapp.png" alt="whatsapp-icon" width="100%" height="100%
-                    ">
+                    " style="border-radius:30%;">
                     </a>
                 </div>
         
